feat: add inverted styles
for buttons, topic, rich-text, teaser, visual

--- a/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
@@ -2,9 +2,14 @@ $name-: 'g-topic' !default;
 
 $host: (
   ':root': (
-    color: var(--color-black),
     font: var(--font-display-l),
     font-weight: var(--font-weight-bold),
     text-transform: null,
+  ),
+  ':root, .g-inverted-reset': (
+    color: var(--color-black),
+  ),
+  '.g-inverted': (
+    color: var(--color-white),
   ),
 ) !default;
