--- a/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
+++ b/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
@@ -5,8 +5,13 @@ $host: (
     font: var(--font-copy-m),
     vertical-spacing: calc(var(--spacing-m) / 2),
     horizontal-spacing: 1em,
-    color: var(--color-black),
     font-weight: var(--font-weight-regular),
+  ),
+  ':root, .g-inverted-reset': (
+    color: var(--color-black),
+  ),
+  '.g-inverted': (
+    color: var(--color-white),
   ),
 ) !default;
 
