--- a/packages/components/base/source/1-atoms/button/button/_button-vars.scss
+++ b/packages/components/base/source/1-atoms/button/button/_button-vars.scss
@@ -1,7 +1,7 @@
 $name-: 'c-button';
 
 $host: (
-  '.c-button': (
+  ':root': (
     font: var(--font-ui-m),
     font-weight: var(--font-weight-regular),
     icon-size: var(--line-height-m),
@@ -9,48 +9,38 @@ $host: (
     border-color: transparent,
     border-width: 0,
     border-radius: 3px,
-    color: var(--color-primary),
     background-color: transparent,
     transform-active: scale(0.95),
   ),
   '.c-button--clear': (
-    color-hover: var(--color-primary-darker-1),
-    color-active: var(--color-primary-darker-2),
-    background-color-hover: var(--color-primary-alpha-2),
-    background-color-active: var(--color-primary-alpha-3),
-  ),
-  '.c-button--clear-inverted': (
-    color: var(--color-white),
-    background-color-hover: var(--color-white-alpha-2),
-    background-color-active: var(--color-white-alpha-3),
+    color: var(--c-button_clear--color),
+    color-hover: var(--c-button_clear--color-hover),
+    background-color-hover: var(--c-button_clear--background-color-hover),
+    background-color-active: var(--c-button_clear--background-color-active),
+    animate-background-color-hover:
+      var(--c-button_clear--animate-background-color-hover),
+    animate-color-hover: var(--c-button_clear--animate-color-hover),
   ),
   '.c-button--solid': (
-    color: var(--color-white),
-    background-color: var(--color-primary),
-    background-color-hover: var(--color-primary-lighter-2),
-    background-color-active: var(--color-primary-lighter-3),
-  ),
-  '.c-button--solid-inverted': (
-    color: var(--color-primary-darker-1),
-    color-hover: var(--color-primary-darker-2),
-    background-color: var(--color-white),
-    background-color-hover: var(--color-primary-lighter-8),
-    background-color-active: var(--color-primary-lighter-7),
+    color: var(--c-button_solid--color),
+    color-hover: var(--c-button_solid--color-hover),
+    background-color: var(--c-button_solid--background-color),
+    background-color-hover: var(--c-button_solid--background-color-hover),
+    background-color-active: var(--c-button_solid--background-color-active),
+    animate-background-color-hover:
+      var(--c-button_solid--animate-background-color-hover),
+    animate-color-hover: var(--c-button_solid--animate-color-hover),
   ),
   '.c-button--outline': (
     border-width: 1px,
-    border-color: var(--color-primary),
-    color-hover: var(--color-primary-darker-1),
-    color-active: var(--color-primary-darker-2),
-    background-color-hover: var(--color-primary-alpha-2),
-    background-color-active: var(--color-primary-alpha-3),
-  ),
-  '.c-button--outline-inverted': (
-    border-width: 1px,
-    color: var(--color-white),
-    border-color: var(--c-button--color),
-    background-color-hover: var(--color-white-alpha-2),
-    background-color-active: var(--color-white-alpha-3),
+    color: var(--c-button_outline--color),
+    color-hover: var(--c-button_outline--color-hover),
+    border-color: var(--c-button_outline--border-color),
+    background-color-hover: var(--c-button_outline--background-color-hover),
+    background-color-active: var(--c-button_outline--background-color-active),
+    animate-background-color-hover:
+      var(--c-button_outline--animate-background-color-hover),
+    animate-color-hover: var(--c-button_outline--animate-color-hover),
   ),
   '.c-button--small': (
     padding: 0.4rem 1rem 0.45rem,
@@ -64,29 +54,66 @@ $host: (
   ),
 ) !default;
 
-$fill-animation: (
-  '.c-button--clear': (
-    background-color-hover: var(--c-button--color),
-    color-hover: var(--color-white),
+$clear: (
+  ':root, .g-inverted-reset': (
+    color: var(--color-primary),
+    color-hover: var(--color-primary-darker-1),
+    color-active: var(--color-primary-darker-2),
+    background-color-hover: var(--color-primary-alpha-2),
+    background-color-active: var(--color-primary-alpha-3),
+    animate-background-color-hover: var(--c-button_clear--color),
+    animate-color-hover: var(--color-white),
   ),
-  '.c-button--clear-inverted': (
-    background-color-hover: var(--c-button--color),
-    color-hover: var(--color-primary),
+  '.g-inverted': (
+    color: var(--color-white),
+    color-hover: var(--c-button_clear--color),
+    color-active: var(--c-button_clear--color),
+    background-color-hover: var(--color-white-alpha-2),
+    background-color-active: var(--color-white-alpha-3),
+    animate-background-color-hover: var(--c-button_clear--color),
+    animate-color-hover: var(--color-primary),
   ),
-  '.c-button--solid': (
-    background-color-hover: var(--c-button--color),
-    color-hover: var(--color-primary),
+) !default;
+
+$solid: (
+  ':root, .g-inverted-reset': (
+    color: var(--color-white),
+    background-color: var(--color-primary),
+    background-color-hover: var(--color-primary-lighter-2),
+    background-color-active: var(--color-primary-lighter-3),
+    animate-background-color-hover: var(--c-button_solid--color),
+    animate-color-hover: var(--color-primary),
   ),
-  '.c-button--solid-inverted': (
-    background-color-hover: var(--c-button--color),
-    color-hover: var(--color-white),
+  '.g-inverted': (
+    color: var(--color-primary-darker-1),
+    color-hover: var(--color-primary-darker-2),
+    background-color: var(--color-white),
+    background-color-hover: var(--color-primary-lighter-8),
+    background-color-active: var(--color-primary-lighter-7),
+    animate-background-color-hover: var(--c-button_solid--color),
+    animate-color-hover: var(--color-white),
   ),
-  '.c-button--outline': (
-    background-color-hover: var(--c-button--color),
-    color-hover: var(--color-white),
+) !default;
+
+$outline: (
+  ':root, .g-inverted-reset': (
+    color: var(--color-primary),
+    color-hover: var(--color-primary-darker-1),
+    color-active: var(--color-primary-darker-2),
+    border-color: var(--c-button_outline--color),
+    background-color-hover: var(--color-primary-alpha-2),
+    background-color-active: var(--color-primary-alpha-3),
+    animate-background-color-hover: var(--c-button_outline--color),
+    animate-color-hover: var(--color-white),
   ),
-  '.c-button--outline-inverted': (
-    background-color-hover: var(--c-button--color),
-    color-hover: var(--color-primary),
+  '.g-inverted': (
+    color: var(--color-white),
+    color-hover: var(--c-button_outline--color),
+    color-active: var(--c-button_outline--color),
+    border-color: var(--c-button_outline--color),
+    background-color-hover: var(--color-white-alpha-2),
+    background-color-active: var(--color-white-alpha-3),
+    animate-background-color-hover: var(--c-button_outline--color),
+    animate-color-hover: var(--color-primary),
   ),
 ) !default;
