fix: remove unused condition

--- a/packages/components/blog/source/2-molecules/news-latest-item/news-latest.scss
+++ b/packages/components/blog/source/2-molecules/news-latest-item/news-latest.scss
@@ -93,12 +93,7 @@
       );
 
       > a {
-        // TODO: remove conditions in version 6
-        color: if(
-          meta.global-variable-exists('news-latest__headline-color', 'news'),
-          news.$news-latest__headline-color,
-          base.$color-black
-        );
+        color: news.$news-latest__headline-color;
       }
     }
 
