feat: finalize inverted styles for all components

--- a/packages/components/base/source/0-base/2-generic/headline/_headline-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/headline/_headline-vars.scss
@@ -1,8 +1,8 @@
 $name-: 'g-headline' !default;
 
 $host: (
-  ':root': (
-    color: var(--color-black),
+  '*': (
+    color: var(--g-text--color),
     font: var(--font-display-m),
     font-weight: var(--font-weight-bold),
     text-transform: null,
