--- a/packages/components/content/source/2-molecules/collapsible-box/collapsible-box.scss
+++ b/packages/components/content/source/2-molecules/collapsible-box/collapsible-box.scss
@@ -9,6 +9,8 @@ $vars: meta.module-variables(collapsible-box-vars);
 @include custom-properties.styles($vars);
 
 .c-collapsible-box {
+  color: var(--g-text--color);
+
   details {
     @include details-reset.details-reset;
 
