--- a/packages/components/content/source/2-molecules/quote/_quote-vars.scss
+++ b/packages/components/content/source/2-molecules/quote/_quote-vars.scss
@@ -35,8 +35,13 @@ $icon: (
       m: 4rem,
     ),
     content: null,
-    color: null,
     transform: null,
+  ),
+  ':root, .g-inverted-reset': (
+    color: var(--color-primary),
+  ),
+  '.g-inverted': (
+    color: var(--color-white),
   ),
 ) !default;
 
