--- a/packages/components/form/source/2-molecules/form-check-group/form-check-group.scss
+++ b/packages/components/form/source/2-molecules/form-check-group/form-check-group.scss
@@ -7,6 +7,7 @@ $vars: meta.module-variables(form-check-group-vars);
 
 .c-form-check-group {
   font: var(--font-ui-s);
+  color: var(--g-text--color);
 
   &__label {
     display: inline-block;
