--- a/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
@@ -1,15 +1,10 @@
 $name-: 'g-topic' !default;
 
 $host: (
-  ':root': (
+  '*': (
     font: var(--font-display-l),
     font-weight: var(--font-weight-bold),
     text-transform: null,
-  ),
-  ':root, .g-inverted-reset': (
-    color: var(--color-black),
-  ),
-  '.g-inverted': (
-    color: var(--color-white),
+    color: var(--g-text--color),
   ),
 ) !default;
