--- a/packages/components/base/source/1-atoms/button/button/_button-vars.scss
+++ b/packages/components/base/source/1-atoms/button/button/_button-vars.scss
@@ -1,4 +1,6 @@
 $name-: 'c-button';
+$_selector-default: ':root, .g-inverted-reset';
+$_selector-inverted: '.g-inverted';
 
 $host: (
   ':root': (
@@ -55,65 +57,65 @@ $host: (
 ) !default;
 
 $clear: (
-  ':root, .g-inverted-reset': (
-    color: var(--color-primary),
-    color-hover: var(--color-primary-darker-1),
-    color-active: var(--color-primary-darker-2),
-    background-color-hover: var(--color-primary-alpha-2),
-    background-color-active: var(--color-primary-alpha-3),
-    animate-background-color-hover: var(--c-button_clear--color),
-    animate-color-hover: var(--color-white),
-  ),
-  '.g-inverted': (
-    color: var(--color-white),
-    color-hover: var(--c-button_clear--color),
-    color-active: var(--c-button_clear--color),
-    background-color-hover: var(--color-white-alpha-2),
-    background-color-active: var(--color-white-alpha-3),
-    animate-background-color-hover: var(--c-button_clear--color),
-    animate-color-hover: var(--color-primary),
-  ),
+  #{$_selector-default}: (
+      color: var(--color-primary),
+      color-hover: var(--color-primary-darker-1),
+      color-active: var(--color-primary-darker-2),
+      background-color-hover: var(--color-primary-alpha-2),
+      background-color-active: var(--color-primary-alpha-3),
+      animate-background-color-hover: var(--c-button_clear--color),
+      animate-color-hover: var(--color-white),
+    ),
+  #{$_selector-inverted}: (
+      color: var(--color-white),
+      color-hover: var(--c-button_clear--color),
+      color-active: var(--c-button_clear--color),
+      background-color-hover: var(--color-white-alpha-2),
+      background-color-active: var(--color-white-alpha-3),
+      animate-background-color-hover: var(--c-button_clear--color),
+      animate-color-hover: var(--color-primary),
+    )
 ) !default;
 
 $solid: (
-  ':root, .g-inverted-reset': (
-    color: var(--color-white),
-    background-color: var(--color-primary),
-    background-color-hover: var(--color-primary-lighter-2),
-    background-color-active: var(--color-primary-lighter-3),
-    animate-background-color-hover: var(--c-button_solid--color),
-    animate-color-hover: var(--color-primary),
-  ),
-  '.g-inverted': (
-    color: var(--color-primary-darker-1),
-    color-hover: var(--color-primary-darker-2),
-    background-color: var(--color-white),
-    background-color-hover: var(--color-primary-lighter-8),
-    background-color-active: var(--color-primary-lighter-7),
-    animate-background-color-hover: var(--c-button_solid--color),
-    animate-color-hover: var(--color-white),
-  ),
+  #{$_selector-default}: (
+      color: var(--color-white),
+      background-color: var(--color-primary),
+      background-color-hover: var(--color-primary-lighter-2),
+      background-color-active: var(--color-primary-lighter-3),
+      animate-background-color-hover: var(--c-button_solid--color),
+      animate-color-hover: var(--color-primary),
+    ),
+  #{$_selector-inverted}: (
+      color: var(--color-primary-darker-1),
+      color-hover: var(--color-primary-darker-2),
+      background-color: var(--color-white),
+      background-color-hover: var(--color-primary-lighter-8),
+      background-color-active: var(--color-primary-lighter-7),
+      animate-background-color-hover: var(--c-button_solid--color),
+      animate-color-hover: var(--color-white),
+    )
 ) !default;
 
 $outline: (
-  ':root, .g-inverted-reset': (
-    color: var(--color-primary),
-    color-hover: var(--color-primary-darker-1),
-    color-active: var(--color-primary-darker-2),
-    border-color: var(--c-button_outline--color),
-    background-color-hover: var(--color-primary-alpha-2),
-    background-color-active: var(--color-primary-alpha-3),
-    animate-background-color-hover: var(--c-button_outline--color),
-    animate-color-hover: var(--color-white),
-  ),
-  '.g-inverted': (
-    color: var(--color-white),
-    color-hover: var(--c-button_outline--color),
-    color-active: var(--c-button_outline--color),
-    border-color: var(--c-button_outline--color),
-    background-color-hover: var(--color-white-alpha-2),
-    background-color-active: var(--color-white-alpha-3),
-    animate-background-color-hover: var(--c-button_outline--color),
-    animate-color-hover: var(--color-primary),
-  ),
+  #{$_selector-default}: (
+      color: var(--color-primary),
+      color-hover: var(--color-primary-darker-1),
+      color-active: var(--color-primary-darker-2),
+      border-color: var(--c-button_outline--color),
+      background-color-hover: var(--color-primary-alpha-2),
+      background-color-active: var(--color-primary-alpha-3),
+      animate-background-color-hover: var(--c-button_outline--color),
+      animate-color-hover: var(--color-white),
+    ),
+  #{$_selector-inverted}: (
+      color: var(--color-white),
+      color-hover: var(--c-button_outline--color),
+      color-active: var(--c-button_outline--color),
+      border-color: var(--c-button_outline--color),
+      background-color-hover: var(--color-white-alpha-2),
+      background-color-active: var(--color-white-alpha-3),
+      animate-background-color-hover: var(--c-button_outline--color),
+      animate-color-hover: var(--color-primary),
+    )
 ) !default;
