--- a/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
+++ b/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
@@ -7,11 +7,8 @@ $host: (
     horizontal-spacing: 1em,
     font-weight: var(--font-weight-regular),
   ),
-  ':root, .g-inverted-reset': (
-    color: var(--color-black),
-  ),
-  '.g-inverted': (
-    color: var(--color-white),
+  '*': (
+    color: var(--g-text--color),
   ),
 ) !default;
 
