--- a/packages/components/content/source/2-molecules/quote/quote.scss
+++ b/packages/components/content/source/2-molecules/quote/quote.scss
@@ -10,6 +10,7 @@ $vars: meta.module-variables(quote-vars);
 .c-quote {
   display: flex;
   align-items: var(--c-quote--align);
+  color: var(--g-text--color);
 
   &__image-wrap {
     flex-shrink: 0;
@@ -30,7 +31,7 @@ $vars: meta.module-variables(quote-vars);
       font-family: var(--c-quote_icon--font-family, var(--font-family-display));
       font-size: var(--c-quote_icon--font-size);
       line-height: 1;
-      color: var(--c-quote_icon--color, var(--color-primary));
+      color: var(--c-quote_icon--color);
       transform: var(--c-quote_icon--transform, translateX(-50%));
     }
   }
