--- a/packages/components/form/source/1-atoms/form-field/form-field.scss
+++ b/packages/components/form/source/1-atoms/form-field/form-field.scss
@@ -9,6 +9,7 @@ $vars: meta.module-variables(form-field-vars);
 
 .c-form-field {
   $input-padding: 0.4rem 0.75rem 0.35rem;
+  color: var(--g-text--color);
 
   @include input-field.wrapper;
   flex-direction: column;
@@ -91,6 +92,6 @@ $vars: meta.module-variables(form-field-vars);
 
   &__hint {
     margin: 0.25rem 0 0;
-    color: var(--color-black-alpha-7);
+    color: var(--g-text_dimmed--color);
   }
 }
