--- a/packages/components/base/source/1-atoms/button/button/_button-vars.scss
+++ b/packages/components/base/source/1-atoms/button/button/_button-vars.scss
@@ -1,9 +1,9 @@
 $name-: 'c-button';
-$_selector-default: ':root, .g-inverted-reset';
-$_selector-inverted: '.g-inverted';
+$_selector-default: '.c-button, .g-inverted-reset .c-button';
+$_selector-inverted: '.g-inverted .c-button';
 
 $host: (
-  ':root': (
+  '.c-button': (
     font: var(--font-ui-m),
     font-weight: var(--font-weight-regular),
     icon-size: var(--line-height-m),
