--- a/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
@@ -1,6 +1,6 @@
 $name-: 'c-form-field';
-$_selector-default: ':root, .g-inverted-reset';
-$_selector-inverted: '.g-inverted';
+$_selector-default: '.c-form-field, .g-inverted-reset .c-form-field';
+$_selector-inverted: '.g-inverted .c-form-field';
 
 $host: (
   '.c-form-field': (
