feat(visual): add headline to visual, still needs some work
mainly re-using the headline here also means re-using its defaults. pretty sure those defaults need
to be overwritable, for this to make sense in most cases (e.g. using headline as p per default for
the visual, and setting it left)

--- a/packages/components/content/source/2-molecules/visual/_visual__box.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__box.scss
@@ -24,7 +24,18 @@
 
   .c-visual__topic {
     /* critical:start */
-    color: var(--c-visual_topic--color);
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      color: var(--c-visual_box--color);
+    }
+
+    p {
+      margin-top: 0;
+    }
     /* critical:end */
   }
 
