fix(visual): remove mobile visual box border radius
#127

--- a/packages/components/content/source/2-molecules/visual/_visual__box.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__box.scss
@@ -13,7 +13,6 @@
   overflow: auto;
   padding: 1.5rem var(--spacing-m);
   border: var(--c-visual_box--border);
-  border-radius: var(--c-visual_box--border-radius);
   background: var(--c-visual_box--background);
   color: var(--c-visual_box--color);
 
@@ -37,6 +36,7 @@
   @include breakpoint.media('≥s') {
     /* critical:start */
     width: auto;
+    border-radius: var(--c-visual_box--border-radius);
     /* critical:end */
   }
 
@@ -44,6 +44,13 @@
     /* critical:start */
     padding-top: 3rem;
     padding-bottom: 3rem;
+    /* critical:end */
+  }
+
+  .c-visual__content--inbox &,
+  .c-visual__content:only-child & {
+    /* critical:start */
+    border-radius: var(--c-visual_box--border-radius);
     /* critical:end */
   }
 
