--- a/packages/components/core/source/design-tokens/colors/_helpers.scss
+++ b/packages/components/core/source/design-tokens/colors/_helpers.scss
@@ -1,28 +1,53 @@
 @use "sass:math";
-@use 'sass:color';
 @use 'sass:map';
 
 $factors: (1, 2, 3, 4, 5, 6, 7, 8, 9);
 
-@function alpha($color) {
+@function alpha($name) {
   $color-map: ();
   @each $factor in $factors {
     $color-map: map.set(
       $color-map,
       #{$factor},
-      rgba($color, math.div($factor, 10))
+      rgba(
+        var(--color-#{$name}-r),
+        var(--color-#{$name}-g),
+        var(--color-#{$name}-b),
+        math.div($factor, 10)
+      )
     );
   }
   @return $color-map;
 }
 
-@function mix($color1, $color2) {
+@function mix($name1, $name2) {
   $color-map: ();
   @each $factor in $factors {
+    $factor1: math.div($factor, 10);
+    $factor2: 1 - $factor1;
     $color-map: map.set(
       $color-map,
       #{$factor},
-      color.mix($color1, $color2, percentage(math.div($factor, 10)))
+      rgb(
+        calc(
+          var(--color-#{$name1}-r) *
+            #{$factor1} +
+            var(--color-#{$name2}-r) *
+            #{$factor2}
+        ),
+        calc(
+          var(--color-#{$name1}-g) *
+            #{$factor1} +
+            var(--color-#{$name2}-g) *
+            #{$factor2}
+        ),
+        calc(
+          var(--color-#{$name1}-b) *
+            #{$factor1} +
+            var(--color-#{$name2}-b) *
+            #{$factor2}
+        )
+      )
     );
   }
   @return $color-map;
