--- a/packages/components/core/source/design-tokens/colors/_colors.scss
+++ b/packages/components/core/source/design-tokens/colors/_colors.scss
@@ -5,11 +5,7 @@
 $brand--primary-r: 51 !default;
 $brand--primary-g: 51 !default;
 $brand--primary-b: 51 !default;
-$brand--primary: rgb(
-  var(--color-primary-r),
-  var(--color-primary-g),
-  var(--color-primary-b)
-) !default;
+$brand--primary: helpers.pack('primary') !default;
 $brand--primary-alpha: helpers.alpha('primary') !default;
 $brand--primary-lighter: helpers.mix('white', 'primary') !default;
 $brand--primary-darker: helpers.mix('black', 'primary') !default;
@@ -17,30 +13,18 @@ $brand--primary-darker: helpers.mix('black', 'primary') !default;
 $brand--secondary-r: 153 !default;
 $brand--secondary-g: 153 !default;
 $brand--secondary-b: 153 !default;
-$brand--secondary: rgb(
-  var(--color-secondary-r),
-  var(--color-secondary-g),
-  var(--color-secondary-b)
-) !default;
+$brand--secondary: helpers.pack('secondary') !default;
 
 $shades--white-r: 255 !default;
 $shades--white-g: 255 !default;
 $shades--white-b: 255 !default;
-$shades--white: rgb(
-  var(--color-white-r),
-  var(--color-white-g),
-  var(--color-white-b)
-) !default;
+$shades--white: helpers.pack('white') !default;
 $shades--white-alpha: helpers.alpha('white') !default;
 
 $shades--black-r: calc(var(--color-primary-r) * 0.1) !default;
 $shades--black-g: calc(var(--color-primary-g) * 0.1) !default;
 $shades--black-b: calc(var(--color-primary-b) * 0.1) !default;
-$shades--black: rgb(
-  var(--color-black-r),
-  var(--color-black-g),
-  var(--color-black-b)
-) !default;
+$shades--black: helpers.pack('black') !default;
 $shades--black-alpha: helpers.alpha('black') !default;
 
 $shades--grey: helpers.mix('black', 'white') !default;
