--- a/packages/components/core/source/design-tokens/colors/_helpers.scss
+++ b/packages/components/core/source/design-tokens/colors/_helpers.scss
@@ -52,3 +52,11 @@ $factors: (1, 2, 3, 4, 5, 6, 7, 8, 9);
   }
   @return $color-map;
 }
+
+@function pack($name) {
+  @return rgb(
+    var(--color-#{$name}-r),
+    var(--color-#{$name}-g),
+    var(--color-#{$name}-b)
+  );
+}
