fix: fix iframe alignment in TextMedia
#115

--- a/packages/components/base/source/2-molecules/text-media/text-media.scss
+++ b/packages/components/base/source/2-molecules/text-media/text-media.scss
@@ -61,11 +61,12 @@
 
   &__media {
     padding: 1rem 0 0 1rem;
+    max-width: 100%;
 
     &--full {
       &,
       > * {
-        width: 100%;
+        width: 100vw !important;
       }
     }
   }
