feat(headline): add more component tokens
* `-c--headline--font`
* `-c--headline--font-weight`
* `-c--headline--color`

--- a/packages/components/base/source/2-molecules/headline/headline.scss
+++ b/packages/components/base/source/2-molecules/headline/headline.scss
@@ -49,6 +49,9 @@ $vars: meta.module-variables(headline-vars);
   > * {
     /* critical:start */
     margin-bottom: 0;
+    font: var(--c-headline--font);
+    font-weight: var(--c-headline--font-weight);
+    color: var(--c-headline--color);
     /* critical:end */
   }
 
