--- a/packages/components/base/source/2-molecules/headline/_headline-vars.scss
+++ b/packages/components/base/source/2-molecules/headline/_headline-vars.scss
@@ -6,6 +6,9 @@ $host: (
       xs: 1rem,
       m: 2rem,
     ),
+    font: var(--g-headline--font),
+    font-weight: var(--g-headline--font-weight),
+    color: var(--g-headline--color),
   ),
 ) !default;
 
