feat(visual): style headline by modifing headline tokens

--- a/packages/components/content/source/2-molecules/visual/_visual-vars.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual-vars.scss
@@ -59,11 +59,10 @@ $box: (
   ),
 ) !default;
 
-$topic: (
+$headline: (
   '.c-visual__box': (
     font: var(--font-display-xl),
     font-weight: var(--font-weight-bold),
-    margin: null,
     color: null,
   ),
   '.c-visual__box--light': (
