--- a/packages/components/content/source/2-molecules/visual/visual.scss
+++ b/packages/components/content/source/2-molecules/visual/visual.scss
@@ -76,11 +76,18 @@ $vars: meta.module-variables(visual-vars);
     @include visual__box.visual-box;
   }
 
-  &__topic {
+  .c-headline {
     /* critical:start */
-    font: var(--c-visual_topic--font);
-    font-weight: var(--c-visual_topic--font-weight);
-    margin: var(--c-visual_topic--margin);
+    --c-headline--font: var(--c-visual_headline--font);
+    --c-headline--color: var(--c-visual_headline--color);
+    --c-headline--font-weight: var(--c-visual_headline--font-weight);
+    --c-headline--margin-bottom: 0;
+
+    max-width: none;
+
+    :first-child {
+      margin-top: 0;
+    }
     /* critical:end */
   }
 
