feat: add hide utilities to global styles

--- a/packages/components/base/source/0-base/global/base.scss
+++ b/packages/components/base/source/0-base/global/base.scss
@@ -7,3 +7,4 @@
 @use '../2-generic/headline/headline' as *;
 @use '../2-generic/topic/topic' as *;
 @use '../2-generic/lazyload/lazyload' as *;
+@use '../4-utilities/hide' as *;
